@@ -3,6 +3,7 @@
 	- pgp5 support (Carlo Wood <carlo@runaway.xs4all.nl>)
 	- fix: segfault from double close on ftpGetFileDesc ftpAbort path.
 	- fix: don't add header if signature generation failed (Carlo Wood).
+	- more DU 4.0D fiddles (Shing-Gene Yung).
 
 2.91 -> 2.92
 	- update with libtool-2.4f.
